examples/test/testpolicy736.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy736
  namespace: namespace177
spec:
  podSelector:
    matchLabels:
      key30: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value49
          key23: value16
          key39: value11
      podSelector:
        matchLabels:
          key44: value19
          key19: value47
